<resources>
<!--    <string name="app_name">GithubUsers</string>-->
    <string name="app_name">SmsCatcher</string>

    <string name="loading">Loading…</string>

    <string name="api_address">API地址:</string>
    <string name="account">帳號:</string>
    <string name="password">密碼:</string>
    <string name="correct">正確</string>
    <string name="error">錯誤</string>
    <string name="bank_account_number">銀行帳戶號碼</string>
    <string name="empty_error">缺少欄位資訊</string>
    <string name="login">登入</string>
    <string name="start">開始</string>
    <string name="cancel">取消</string>

    <string name="db_server">資料庫地址:</string>
    <string name="db_server_hint">54.180.61.184:1433</string>
    <string name="db_name">資料庫名稱</string>
    <string name="db_table">資料庫Table</string>
    <string name="db_table_hint">Sms</string>
    <string name="db_name_hint">TTChain</string>
    <string name="db_user">資料庫使用者</string>
    <string name="db_user_hint">allen.li</string>
    <string name="db_password">資料庫登入密碼</string>
    <string name="db_error">資料庫連線失敗</string>
    <string name="db_url">jdbc:jtds:sqlserver://%1$s;databasename=%2$s;user=%3$s;password=%4$s;</string>
    <string name="db_service_switch">資料庫 開/關服務</string>

    <string name="start_sms_catcher">開啟簡訊捕手</string>
    <string name="sms_success">簡訊處理完成!</string>
    <string name="network_error">網路發生問題，請再試一次</string>

</resources>
