<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/padding_16"
        android:paddingTop="@dimen/padding_4"
        android:paddingEnd="@dimen/padding_16"
        android:paddingBottom="@dimen/padding_4">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/dbSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_12"
            android:layout_marginBottom="@dimen/padding_12"
            android:text="@string/db_service_switch"
            tools:checked="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/db_server" />

        <EditText
            android:id="@+id/editTextDbServer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/db_server_hint"
            android:maxLines="1"
            android:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/db_name" />

        <EditText
            android:id="@+id/editTextDbName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/db_name_hint"
            android:maxLines="1"
            android:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/db_table" />

        <EditText
            android:id="@+id/editTextDbTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/db_table_hint"
            android:maxLines="1"
            android:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/db_user" />

        <EditText
            android:id="@+id/editTextDbUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/db_user_hint"
            android:maxLines="1"
            android:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/db_password" />

        <EditText
            android:id="@+id/editTextDbPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />
    </LinearLayout>
</ScrollView>