<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:padding="@dimen/padding_16">

    <Button
        android:id="@+id/getBankButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_12"
        android:layout_marginEnd="@dimen/padding_12"
        android:layout_toStartOf="@+id/bank_switch"
        android:text="查看銀行帳戶列表" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/bank_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/getBankButton"
        android:layout_alignBottom="@+id/getBankButton"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/padding_16"
        android:text="銀行卡開關" />

    <TextView
        android:id="@+id/bank_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/getBankButton"
        android:layout_marginTop="@dimen/padding_8"
        android:text="@string/bank_account_number" />

    <EditText
        android:id="@+id/editTextBankAccountNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bank_title"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:singleLine="true"
        tools:text="6216602076993163544" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextBankAccountNo">

        <Button
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/bg_aqua_radius_3"
            android:padding="@dimen/padding_8"
            android:text="@string/start"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cancelButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/bg_aqua_radius_3"
            android:clickable="false"
            android:padding="@dimen/padding_8"
            android:text="@string/cancel"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/testButton"
            app:layout_constraintStart_toEndOf="@+id/startButton"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/testButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="一鍵輸入"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cancelButton"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textResult"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/button_layout"
        android:layout_marginTop="@dimen/padding_8"
        android:background="@drawable/bg_grey_edge_radius_4"
        android:padding="@dimen/padding_4"
        android:textSize="@dimen/text_size"
        tools:text="kahdskdjahdk\nhdkahksdkahd" />

</RelativeLayout>